@@ -1,3 +1,8 @@
+2018-01-17  Karen   <cerebrum@cleomedes.uit.no>
+
+    * import_tlf.py: Made changes to import_tlf.py so that it only updates telephone 
+    numbers that have actually changed.
+
 2018-01-02    <cerebrum@cleomedes.uit.no>
 
 	* generate_temp_employee_xml.py (write_xml): removed debug lines
